test/negative/infer_none.mut
# Negative: cannot infer type from None in := declaration
x := None
